Get Config screen working mostly how I want it to. Also delete PositionAnchor as it's not needed. Still many TODOs

--- a/src/main/resources/assets/monitorial/lang/en_us.json
+++ b/src/main/resources/assets/monitorial/lang/en_us.json
@@ -1,5 +1,33 @@
 {
   "options.monitorial.configure_monitors": "Preferred Monitor Settings",
   "options.monitorial.config_title": "Monitorial Configuration",
-  "options.monitorial.use_global_config": "Use Global Config"
+  "options.monitorial.use_global_config": "Use Global Config",
+  "options.monitorial.use_global_config.tooltip": "If the global config file should be used, rather than a local (per instance) one. NOTE: If this is set to false in the global config, all instances will use their local configs.",
+  "options.monitorial.currently_editing": "Currently Editing",
+  "options.monitorial.global_config": "Global",
+  "options.monitorial.local_config": "Local",
+  "options.monitorial.automatic_mode": "Automatic Mode",
+  "options.monitorial.automatic_mode.tooltip": "If Monotorial should automatically save the last window position and size to use for the next game launch. Disable to enable manual configuration",
+  "options.monitorial.disabled_automatic": "Automatic mode is on",
+  "options.monitorial.currently_editing.tooltip": "File location: %s",
+  "options.monitorial.monitor_data.primary": "Primary (%s)",
+  "options.monitorial.default_monitor.tooltip": "The monitor that the game window will be on",
+  "options.monitorial.default_monitor": "Monitor",
+  "options.monitorial.force_move": "Force Move",
+  "options.monitorial.force_move.tooltip": "Attempt to force move the window after it has opened (for use when we cannot control the window opening). ELS Only will only try move it if NeoForge's early loading screen is enabled",
+  "options.monitorial.force_move.never": "Never",
+  "options.monitorial.force_move.els_only": "ELS Only",
+  "options.monitorial.force_move.always": "Always",
+  "options.monitorial.x_pos": "X Offset",
+  "options.monitorial.y_pos": "Y Offset",
+  "options.monitorial.x_size": "Window Width",
+  "options.monitorial.y_size": "Window Height",
+  "options.monitorial.x_pos.tooltip": "The X offset applied from the anchor position",
+  "options.monitorial.y_pos.tooltip": "The Y offset applied from the anchor position",
+  "options.monitorial.x_size.tooltip": "The width of the window",
+  "options.monitorial.y_size.tooltip": "The height of the window",
+  "options.monitorial.pixel_postfix": "px",
+  "options.monitorial.not_in_use.global_config.global_disabled": "The global config is not in use due to being disabled in the global config!",
+  "options.monitorial.not_in_use.global_config.local_disabled": "The global config is not in use due to being disabled in the local config!",
+  "options.monitorial.not_in_use.local_config.local_disabled": "The local config is not in use due to being disabled in the local config!"
 }
