--- a/src/main/resources/assets/monitorial/lang/en_us.json
+++ b/src/main/resources/assets/monitorial/lang/en_us.json
@@ -7,14 +7,14 @@
   "options.monitorial.global_config": "Global",
   "options.monitorial.local_config": "Local",
   "options.monitorial.automatic_mode": "Automatic Mode",
-  "options.monitorial.automatic_mode.tooltip": "If Monotorial should automatically save the last window position and size to use for the next game launch. Disable to enable manual configuration",
+  "options.monitorial.automatic_mode.tooltip": "If Monotorial should automatically save information about the window to use for the next game launch. Disable to enable manual configuration",
   "options.monitorial.disabled_automatic": "Automatic mode is on",
   "options.monitorial.currently_editing.tooltip": "File location: %s",
   "options.monitorial.monitor_data.primary": "Primary (%s)",
   "options.monitorial.default_monitor.tooltip": "The monitor that the game window will be on",
   "options.monitorial.default_monitor": "Monitor",
   "options.monitorial.force_move": "Force Move",
-  "options.monitorial.force_move.tooltip": "Attempt to force move the window after it has opened (for use when we cannot control the window opening). ELS Only will only try move it if NeoForge's early loading screen is enabled",
+  "options.monitorial.force_move.tooltip": "Attempt to force move and resize the window after it has opened. This is required to have custom positions apply. ELS Only will only try if NeoForge's Early Loading Screen is enabled",
   "options.monitorial.force_move.never": "Never",
   "options.monitorial.force_move.els_only": "ELS Only",
   "options.monitorial.force_move.always": "Always",
@@ -22,12 +22,17 @@
   "options.monitorial.y_pos": "Y Offset",
   "options.monitorial.x_size": "Window Width",
   "options.monitorial.y_size": "Window Height",
-  "options.monitorial.x_pos.tooltip": "The X offset applied from the anchor position",
-  "options.monitorial.y_pos.tooltip": "The Y offset applied from the anchor position",
-  "options.monitorial.x_size.tooltip": "The width of the window",
-  "options.monitorial.y_size.tooltip": "The height of the window",
+  "options.monitorial.x_pos.tooltip": "The X offset applied from the left side of the monitor",
+  "options.monitorial.y_pos.tooltip": "The Y offset applied from the top of the monitor",
+  "options.monitorial.x_size.tooltip": "The width of the window. 0 to use default width",
+  "options.monitorial.y_size.tooltip": "The height of the window. 0 to use default height",
   "options.monitorial.pixel_postfix": "px",
   "options.monitorial.not_in_use.global_config.global_disabled": "The global config is not in use due to being disabled in the global config!",
   "options.monitorial.not_in_use.global_config.local_disabled": "The global config is not in use due to being disabled in the local config!",
-  "options.monitorial.not_in_use.local_config.local_disabled": "The local config is not in use due to being disabled in the local config!"
+  "options.monitorial.not_in_use.local_config.local_disabled": "The local config is not in use due to being disabled in the local config!",
+  "options.monitorial.apply_changes_to_window": "Apply Changes Now",
+  "options.monitorial.apply_changes_to_window.move_failed": "Move Failed",
+  "options.monitorial.apply_changes_to_window.resize_failed": "Resize Failed",
+  "options.monitorial.apply_changes_to_window.move_and_resize_failed": "Move and Resize Failed",
+  "options.monitorial.set_current_size_and_position": "Set to Current"
 }
