Update screen and lang to reflect pos = -1 changes

--- a/src/main/resources/assets/monitorial/lang/en_us.json
+++ b/src/main/resources/assets/monitorial/lang/en_us.json
@@ -22,8 +22,8 @@
   "options.monitorial.y_pos": "Y Offset",
   "options.monitorial.x_size": "Window Width",
   "options.monitorial.y_size": "Window Height",
-  "options.monitorial.x_pos.tooltip": "The X offset applied from the left side of the monitor",
-  "options.monitorial.y_pos.tooltip": "The Y offset applied from the top of the monitor",
+  "options.monitorial.x_pos.tooltip": "The X offset applied from the left side of the monitor. -1 to not try move on this axis",
+  "options.monitorial.y_pos.tooltip": "The Y offset applied from the top of the monitor. -1 to not try move on this axis",
   "options.monitorial.x_size.tooltip": "The width of the window. 0 to use default width",
   "options.monitorial.y_size.tooltip": "The height of the window. 0 to use default height",
   "options.monitorial.pixel_postfix": "px",
